--- a/public/examen-de-la-vue/index.html
+++ b/public/examen-de-la-vue/index.html
@@ -50,13 +50,13 @@
 "paymentAccepted":"Visa, Master Card"
 } </script>
 
-<link rel="apple-touch-icon" sizes="152x152" href="../apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
 <link rel="manifest" href="../manifest.json">
-<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
+<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#00ae41">
 <meta name="theme-color" content="#ffffff">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,800,700,600|Montserrat:400,500,600,700|Raleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800,700,600|Montserrat:400,500,600,700|Raleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../css/style.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <!--[if lt IE 9]>
 		<script src="js/vendor/html5shiv.min.js"></script>
