Last fixes before pushing online

--- a/public/promotions/decembre-janvier/index.html
+++ b/public/promotions/decembre-janvier/index.html
@@ -74,7 +74,7 @@
 				<ul class="top-menu">
 					<li class="separated"><a href="tel:&#43;14506691686">(450) 669-1686</a></li>
 					<li><a href="mailto:info@airevisuelle.com">info@airevisuelle.com</a></li>
-					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;">Vision Avenue</a></li>
+					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;" class="hidden-xs hidden-sm">Vision Avenue</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-6 hidden-xs">
@@ -243,17 +243,18 @@
     <div class="container">
         <nav>
             <ul>
-                <li class="dropdown"> <a href="../../catalogue">Catalogue</a></li>
-                <li class="dropdown"> <a href="../../a-propos">À propos</a></li>
+                <li class="visible-xs visible-sm"><a href="https://interpreter-duck-58401.netlify.com/">Accueil</a></li>
+                <li><a href="../../catalogue">Catalogue</a></li>
+                <li><a href="../../a-propos">À propos</a></li>
                 <li class="dropdown"> <a href="../../services">Services</a><ul class="dropdown-menu">
     <li><a href="../../services/lunetterie">Lunetterie</a></li>
-    <li><a href="../../services/opticien">Opticien<span class="label label-danger">NOUVEAU</span></a></li>
+    <li><a href="../../services/opticien">Opticien</a></li>
     <li><a href="../../services/optometrie">Optométrie</a></li>
     <li><a href="../../services/verres-de-contact">Verres de contact</a></li>
 </ul></li>
-                <li class="dropdown"> <a href="../../services/examen-de-la-vue">Examen de la vue</a></li>
-                <li class="dropdown mega-menu-item"> <a href="../../promotions">Promotions</a></li> 
-                <li class="dropdown mega-menu-item"> <a href="../../nous-rejoindre">Contact</a></li>
+                <li> <a href="../../services/examen-de-la-vue">Examen de la vue</a></li>
+                <li> <a href="../../promotions">Promotions</a></li> 
+                <li> <a href="../../nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -333,7 +334,7 @@
                     <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
                         <div class="portfolio-item-wrap">
                             <div class="portfolio-image">
-                                <a href="https://interpreter-duck-58401.netlify.com/services/optometrie/"><img src="../../img/xl/optometrie.jpg" alt=""></a>
+                                <a href="https://interpreter-duck-58401.netlify.com/services/optometrie/"><img src="../../img/xl/optometrie-banniere.jpg" alt=""></a>
                             </div>
                             <div class="portfolio-description">
                                 <a href="https://interpreter-duck-58401.netlify.com/services/optometrie/">
@@ -441,13 +442,13 @@
                 <li><a href="../../catalogue">Catalogue</a></li>
                 <li><a href="../../services">Services</a></li>
                 <li><a href="../../promotions">Promotions</a></li>
-                <li><a href="../../articles">Articles</a></li>
-                <li><a href="../../contactez-nous">Contact</a></li>
+                <li><a href="../../a-propos">À propos</a></li>
+                <li><a href="../../nous-rejoindre">Contact</a></li>
               </ul>
             </div>
              
           </div>
-          <div class="col-md-3"> 
+          <div class="col-md-3 hidden-xs"> 
             
             <div class="widget">
               <h4>Nos articles les plus récents</h4>
@@ -492,8 +493,7 @@
 		
 		
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4&"
-  type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
 <script src="../../js/main.min.js"></script>
 </body>
