--- a/public/nous-rejoindre/index.html
+++ b/public/nous-rejoindre/index.html
@@ -74,7 +74,7 @@
 				<ul class="top-menu">
 					<li class="separated"><a href="tel:&#43;14506691686">(450) 669-1686</a></li>
 					<li><a href="mailto:info@airevisuelle.com">info@airevisuelle.com</a></li>
-					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;">Vision Avenue</a></li>
+					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;" class="hidden-xs hidden-sm">Vision Avenue</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-6 hidden-xs">
@@ -243,17 +243,18 @@
     <div class="container">
         <nav>
             <ul>
-                <li class="dropdown"> <a href="../catalogue">Catalogue</a></li>
-                <li class="dropdown"> <a href="../a-propos">À propos</a></li>
+                <li class="visible-xs visible-sm"><a href="https://interpreter-duck-58401.netlify.com/">Accueil</a></li>
+                <li><a href="../catalogue">Catalogue</a></li>
+                <li><a href="../a-propos">À propos</a></li>
                 <li class="dropdown"> <a href="../services">Services</a><ul class="dropdown-menu">
     <li><a href="../services/lunetterie">Lunetterie</a></li>
-    <li><a href="../services/opticien">Opticien<span class="label label-danger">NOUVEAU</span></a></li>
+    <li><a href="../services/opticien">Opticien</a></li>
     <li><a href="../services/optometrie">Optométrie</a></li>
     <li><a href="../services/verres-de-contact">Verres de contact</a></li>
 </ul></li>
-                <li class="dropdown"> <a href="../services/examen-de-la-vue">Examen de la vue</a></li>
-                <li class="dropdown mega-menu-item"> <a href="../promotions">Promotions</a></li> 
-                <li class="dropdown mega-menu-item"> <a href="../nous-rejoindre">Contact</a></li>
+                <li> <a href="../services/examen-de-la-vue">Examen de la vue</a></li>
+                <li> <a href="../promotions">Promotions</a></li> 
+                <li> <a href="../nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -287,41 +288,37 @@
                     <div class="row m-t-40">
                         <div class="col-md-6">
                             <address>
-	  <strong>L'Aire Visuelle</strong><br>
-		380 boul. Dagenais Est suite 102<br>
-		Laval (Québec)<br>
-		Coin René-Laennec<br>
-	  <abbr title="Phone">P:</abbr> (450) 669-1686
-	</address>
+														  <strong>L'Aire Visuelle</strong><br>
+															380 boul. Dagenais Est suite 102<br>
+															Laval (Québec)<br>
+															Coin René-Laennec<br>
+														  <abbr title="Phone">P:</abbr> (450) 669-1686
+														</address>
                         </div>
                         <div class="col-md-6">
                             <address>
-	  <strong>Heures d'ouverture</strong><br>
-	  Lundi au jeudi : 9 h à 20 h<br>
-		Vendredi : 9 h à 18 h<br>
-		Samedi : 10 h à 16 h<br>
-		Dimanche : Fermé<br>
-	</address>
+														  <strong>Heures d'ouverture</strong><br>
+														  Lundi au jeudi : 9 h à 20 h<br>
+															Vendredi : 9 h à 18 h<br>
+															Samedi : 10 h à 16 h<br>
+															Dimanche : Fermé<br>
+														</address>
                         </div>
-                    </div>
-
-
-
-
-                    <div class="social-icons m-t-30 social-icons-colored">
-                        <ul>
-                            <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                            <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-                            <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
+                        <div class="social-icons m-t-20 m-b-20 social-icons-colored col-md-12">
+		                        <ul>
+		                            <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+		                            <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+		                            <li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+		                            <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
+		                            <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
+		                            <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		                        </ul>
+		                    </div>
+		                  </div>
                 </div>
 
                 <div class="col-md-6">
-                    <form class="widget-contact-form" action="include/contact-form.php" role="form" method="post">
+                    <form class="widget-contact-form" action="/merci" name="contact-fr" role="form" method="post" netlify>
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <label for="name">Nom</label>
@@ -414,13 +411,13 @@
                 <li><a href="../catalogue">Catalogue</a></li>
                 <li><a href="../services">Services</a></li>
                 <li><a href="../promotions">Promotions</a></li>
-                <li><a href="../articles">Articles</a></li>
-                <li><a href="../contactez-nous">Contact</a></li>
+                <li><a href="../a-propos">À propos</a></li>
+                <li><a href="../nous-rejoindre">Contact</a></li>
               </ul>
             </div>
              
           </div>
-          <div class="col-md-3"> 
+          <div class="col-md-3 hidden-xs"> 
             
             <div class="widget">
               <h4>Nos articles les plus récents</h4>
@@ -465,8 +462,7 @@
 		
 		
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4&"
-  type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
 <script src="../js/main.min.js"></script>
 </body>
