Added articles made some small modif

--- a/public/en/catalog/index.html
+++ b/public/en/catalog/index.html
@@ -604,6 +604,25 @@
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
-<script src="../../js/main.min.js"></script>
+<script type="text/javascript" src="../../js/jquery-git.min.js"></script>
+<script type="text/javascript" src="../../js/instafeed.js"></script>
+<script type="text/javascript" src="../../js/countdown-master/dest/jquery.countdown.min.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.date.js"></script>
+<script type="text/javascript" src="../../js/prismjs/prism.js"></script>
+<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../../js/animate.js"></script>
+<script type="text/javascript" src="../../js/waypoints.js"></script>
+<script type="text/javascript" src="../../js/FlexSlider-release-2-2-0/jquery.flexslider.js"></script>
+<script type="text/javascript" src="../../js/jquery.mb.YTPlayer.min.js"></script>
+<script type="text/javascript" src="../../js/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/typed.js"></script>
+<script type="text/javascript" src="../../js/main.js"></script>
+<script type="text/javascript" src="../../js/user.js"></script>
+<script type="text/javascript" src="../../js/arcticmodal/jquery.arcticmodal-0.3.min.js"></script>
+<script type="text/javascript" src="../../js/placeholder/placeholder.js"></script>
+<script type="text/javascript" src="../../js/jquery.mobile-git.min.js"></script>
+
 </body>
 </html>
