--- a/public/en/contact-us/index.html
+++ b/public/en/contact-us/index.html
@@ -342,22 +342,22 @@
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <label for="name">Name</label>
-                                <input type="text" aria-required="true" name="widget-contact-form-name" class="form-control required name" placeholder='Enter your name'>
+                                <input type="text" aria-required="true" name="widget-contact-form-name" class="form-control required name" placeholder='Enter your name' required>
                             </div>
                             <div class="form-group col-sm-6">
                                 <label for="email">E-mail us</label>
-                                <input type="email" aria-required="true" name="widget-contact-form-email" class="form-control required email" placeholder='Enter your email'>
+                                <input type="email" aria-required="true" name="widget-contact-form-email" class="form-control required email" placeholder='Enter your email' type="email" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-sm-12">
                                 <label for="subject">Subject</label>
-                                <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder='Subject...'>
+                                <input type="text" name="widget-contact-form-subject" class="form-control" placeholder='Subject...'>
                             </div>
                         </div>                                
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control required" placeholder='Write your message'></textarea>
+                            <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control" placeholder='Write your message'></textarea>
                         </div>
 
                         <button class="btn btn-default" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send your message</button>
@@ -482,6 +482,25 @@
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
-<script src="../../js/main.min.js"></script>
+<script type="text/javascript" src="../../js/jquery-git.min.js"></script>
+<script type="text/javascript" src="../../js/instafeed.js"></script>
+<script type="text/javascript" src="../../js/countdown-master/dest/jquery.countdown.min.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.date.js"></script>
+<script type="text/javascript" src="../../js/prismjs/prism.js"></script>
+<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../../js/animate.js"></script>
+<script type="text/javascript" src="../../js/waypoints.js"></script>
+<script type="text/javascript" src="../../js/FlexSlider-release-2-2-0/jquery.flexslider.js"></script>
+<script type="text/javascript" src="../../js/jquery.mb.YTPlayer.min.js"></script>
+<script type="text/javascript" src="../../js/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/typed.js"></script>
+<script type="text/javascript" src="../../js/main.js"></script>
+<script type="text/javascript" src="../../js/user.js"></script>
+<script type="text/javascript" src="../../js/arcticmodal/jquery.arcticmodal-0.3.min.js"></script>
+<script type="text/javascript" src="../../js/placeholder/placeholder.js"></script>
+<script type="text/javascript" src="../../js/jquery.mobile-git.min.js"></script>
+
 </body>
 </html>
