--- a/public/en/appointment-optometrist/index.html
+++ b/public/en/appointment-optometrist/index.html
@@ -11,8 +11,7 @@
 	
 	
 	
-	<head>
-	<meta name="robots" content="noindex"><meta charset="utf-8" />
+	<head><meta name="robots" content="noindex"><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="A team of experts ready to help you. Book an appointment today." />
 <title>L&#39;Aire Visuelle | Arrange An Appointment</title>
@@ -360,7 +359,7 @@
                         <div class="col-md-12">
                             <p>You can book online directly into the respective schedule of our <strong>optometrists</strong>.</p>
                             <p>We are available to answer all your questions, as well as to advise you in the choice of prescription glasses, sunglasses or contact lenses.</p>
-                            <a class="btn btn-rounded btn-reveal btn-reveal-left" href='http://pp.lairevisuelle.com/PP11020/User/List?Company=384D91A1-09C1-4615-B0AC-2FE440E9957A&Language=EN' target="_blank" style="display: inline-block;"><span class="btn-label">Book an appointment</span><i class="fa fa-arrow-right"></i></a>
+                            <a class="btn btn-rounded btn-reveal btn-reveal-left" href='http://pp.lairevisuelle.com/PP11020/User/List?Company=384D91A1-09C1-4615-B0AC-2FE440E9957A&language=en' target="_blank" style="display: inline-block;"><span class="btn-label">Book an appointment</span><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="row m-t-40 hidden-xs hidden-sm">
@@ -519,6 +518,25 @@
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
-<script src="../../js/main.min.js"></script>
+<script type="text/javascript" src="../../js/jquery-git.min.js"></script>
+<script type="text/javascript" src="../../js/instafeed.js"></script>
+<script type="text/javascript" src="../../js/countdown-master/dest/jquery.countdown.min.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.js"></script>
+<script type="text/javascript" src="../../js/picker/picker.date.js"></script>
+<script type="text/javascript" src="../../js/prismjs/prism.js"></script>
+<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../../js/animate.js"></script>
+<script type="text/javascript" src="../../js/waypoints.js"></script>
+<script type="text/javascript" src="../../js/FlexSlider-release-2-2-0/jquery.flexslider.js"></script>
+<script type="text/javascript" src="../../js/jquery.mb.YTPlayer.min.js"></script>
+<script type="text/javascript" src="../../js/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="../../js/typed.js"></script>
+<script type="text/javascript" src="../../js/main.js"></script>
+<script type="text/javascript" src="../../js/user.js"></script>
+<script type="text/javascript" src="../../js/arcticmodal/jquery.arcticmodal-0.3.min.js"></script>
+<script type="text/javascript" src="../../js/placeholder/placeholder.js"></script>
+<script type="text/javascript" src="../../js/jquery.mobile-git.min.js"></script>
+
 </body>
 </html>
