Added article and fixed hours

--- a/public/en/services/eyewear-glasses/index.html
+++ b/public/en/services/eyewear-glasses/index.html
@@ -435,7 +435,7 @@
                 <li><i class="fa fa-phone"></i><a href="tel:&#43;14506691686" class="visible-xs">(450) 669-1686</a><span class="hidden-xs" style="color:#494949!important">(450) 669-1686</span></li>
                 <li><i class="fa fa-envelope"></i><a href="mailto:info@lairevisuelle.com">info@lairevisuelle.com</a></li>
                 <li> <br>
-                  <i class="fa fa-clock-o"></i>Monday - Thursday: <strong>08:00 - 20:00</strong> <br>Friday: <strong>09:00 - 18:00</strong> <br>Saturday: <strong>10:00 - 16:00</strong> <br>Sunday: <strong>Closed</strong> <br></li>
+                  <i class="fa fa-clock-o"></i>Saturday April 21th, 2018: <strong>CLOSED</strong> <br>Monday - Thursday: <strong>09:00 - 20:00</strong> <br>Friday: <strong>09:00 - 18:00</strong> <br>Saturday: <strong>10:00 - 16:00</strong> <br>Sunday: <strong>Closed</strong> <br></li>
               </ul>
               
               <div class="social-icons social-icons-border float-left m-t-20">
@@ -500,7 +500,7 @@
             <a href='https://www.lairevisuelle.com/en/promotions/'>
               <div class="widget" data-username="ardianmusliu" data-limit="2">
                 <h4>Deal of the month</h4>
-                <p>50$ discount on our William Morris collection in March</p>
+                <p>50$ discount on our Dior collection in April</p>
                 <img src="../../../quart/img/opticien-1.jpg" alt="Rabais" style="max-width: 100%;">
               </div>
             </a>
@@ -524,25 +524,7 @@
     <a id="goToTop"><i class="fa fa-angle-up top-icon"></i><i class="fa fa-angle-up"></i></a>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUq8w95L-UQnrXxDfX1zfn804SNDzbUj4" type="text/javascript"></script>
 
-<script type="text/javascript" src="../../../js/jquery-git.min.js"></script>
-<script type="text/javascript" src="../../../js/instafeed.js"></script>
-<script type="text/javascript" src="../../../js/countdown-master/dest/jquery.countdown.min.js"></script>
-<script type="text/javascript" src="../../../js/picker/picker.js"></script>
-<script type="text/javascript" src="../../../js/picker/picker.date.js"></script>
-<script type="text/javascript" src="../../../js/prismjs/prism.js"></script>
-<script type="text/javascript" src="../../../bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../../js/animate.js"></script>
-<script type="text/javascript" src="../../../js/waypoints.js"></script>
-<script type="text/javascript" src="../../../js/FlexSlider-release-2-2-0/jquery.flexslider.js"></script>
-<script type="text/javascript" src="../../../js/jquery.mb.YTPlayer.min.js"></script>
-<script type="text/javascript" src="../../../js/masonry.pkgd.min.js"></script>
-<script type="text/javascript" src="../../../js/imagesloaded.pkgd.min.js"></script>
-<script type="text/javascript" src="../../../js/typed.js"></script>
-<script type="text/javascript" src="../../../js/main.js"></script>
-<script type="text/javascript" src="../../../js/user.js"></script>
-<script type="text/javascript" src="../../../js/arcticmodal/jquery.arcticmodal-0.3.min.js"></script>
-<script type="text/javascript" src="../../../js/placeholder/placeholder.js"></script>
-<script type="text/javascript" src="../../../js/jquery.mobile-git.min.js"></script>
 
+<script src="../../../js/main.min.js"></script>
 </body>
 </html>
