Added august promo

--- a/public/nous-rejoindre/index.html
+++ b/public/nous-rejoindre/index.html
@@ -478,7 +478,7 @@
             <a href='https://www.lairevisuelle.com/promotions/'>
               <div class="widget" data-username="ardianmusliu" data-limit="2">
                 <h4>Promotions du mois</h4>
-                <p>Obtenez 30% de rabais sur nos lunettes de soleil en inventaire en Juin et en Juillet</p>
+                <p>Obtenez 50$ de rabais sur la collection Etnia Barcelona en Août</p>
                 <img src="../quart/img/opticien-1.jpg" alt="Rabais" style="max-width: 100%;">
               </div>
             </a>
