--- a/public/a-propos/index.html
+++ b/public/a-propos/index.html
@@ -325,7 +325,7 @@
       
         <h2>Promotion du mois</h2>
         <p class="lead">
-            Obtenez 30% de rabais sur nos lunettes de soleil en inventaire en Juin et en Juillet
+            Obtenez 50$ de rabais sur la collection Etnia Barcelona en Août
         </p>
 
         <a class="btn btn-default icon-left" href="https://www.lairevisuelle.com/promotions"><span>En savoir plus</span></a>
@@ -703,7 +703,7 @@
             <a href='https://www.lairevisuelle.com/promotions/'>
               <div class="widget" data-username="ardianmusliu" data-limit="2">
                 <h4>Promotions du mois</h4>
-                <p>Obtenez 30% de rabais sur nos lunettes de soleil en inventaire en Juin et en Juillet</p>
+                <p>Obtenez 50$ de rabais sur la collection Etnia Barcelona en Août</p>
                 <img src="../quart/img/opticien-1.jpg" alt="Rabais" style="max-width: 100%;">
               </div>
             </a>
