--- a/public/en/merci/index.html
+++ b/public/en/merci/index.html
@@ -382,7 +382,7 @@
             <a href='https://www.lairevisuelle.com/en/promotions/'>
               <div class="widget" data-username="ardianmusliu" data-limit="2">
                 <h4>Deal of the month</h4>
-                <p>Get a 30% discount on our in-stock sunglasses in June and July</p>
+                <p>Get a 50$ discount on our Etnia Barcelona collection in August</p>
                 <img src="../../quart/img/opticien-1.jpg" alt="Rabais" style="max-width: 100%;">
               </div>
             </a>
