--- a/public/promotions/index.html
+++ b/public/promotions/index.html
@@ -360,7 +360,7 @@
                                 
                                 <h2><a href="#nothing">Lunettes complètes à prix réduit</a></h2>
                                 <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Rabais permanent</span>
-                                <p>Lunettes complètes (verres et montures) à partir de 149$ avec notre partenaire <a href="https://www.visionavenue.ca/fr/" target="_blank">Vision Avenue</a></p>
+                                <p>Lunettes complètes (verres et montures) a partir de 149$ avec notre partenaire <a href="https://www.visionavenue.ca/fr/" target="_blank">Vision Avenue</a></p>
                             </div>
                         </div>
                     </div>
