--- a/public/promotions/index.html
+++ b/public/promotions/index.html
@@ -376,9 +376,9 @@
                             </div>
                             <div class="post-item-description">
                                 
-                                <h2><a href="#nothing">Programme de renouvellement de verres pour les 15 ans et moins</a></h2>
-                                <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Rabais permanent</span>
-                                <p>Programme de renouvellement de verres d&rsquo;une période de 15 mois pour les 15 ans et moins, ainsi qu&rsquo;un escompte de 50$ à l&rsquo;achat d&rsquo;une paire de lunettes complètes (verres et monture).</p>
+                                <h2><a href="http://www.ramq.gouv.qc.ca/fr/citoyens/programmes-aide/Pages/lunettes-verres-enfants.aspx">Remboursement pour les lunettes et verres de contact pour les enfants</a></h2>
+                                <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Programme valide à partir du 1er septembre 2019</span>
+                                <p>Le programme d’aide financière Mieux voir pour réussir offre un remboursement de 250 $ à la suite de l’achat de lunettes ou de verres de contact (lentilles) pour tout enfant de moins de 18 ans. Ce montant est fixe : il ne varie pas en fonction du coût de votre achat. Seuls les achats effectués à partir du 1er septembre 2019 chez un marchand au Québec sont admissibles. Le remboursement est accordé uniquement pour l’achat de lunettes ou de verres de contact prescrits par un professionnel et visant à corriger la vision.</p>
                             </div>
                         </div>
                     </div>
