--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -17,5 +17,6 @@
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^1.1.0/dist/cms.js"></script>
+  <script type="text/javascript"  src="https://apiv2.popupsmart.com/api/Bundle/353741" async></script>
 </body>
 </html>
