--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -12,11 +12,9 @@
 	<meta name="theme-color" content="#ffffff">
   <meta name="robots" content="noindex,nofollow">
   <title>Gestionnaire de contenu</title>
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.1.0/dist/cms.css" />
-  <link rel="stylesheet" href="/admin/admin.css" />
 </head>
 <body>
-  <script src="https://unpkg.com/netlify-cms@^1.1.0/dist/cms.js"></script>
-  <script type="text/javascript"  src="https://apiv2.popupsmart.com/api/Bundle/353741" async></script>
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script type="text/javascript" src="https://apiv2.popupsmart.com/api/Bundle/353741" async></script>
 </body>
 </html>
