--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -12,6 +12,7 @@
 	<meta name="theme-color" content="#ffffff">
   <meta name="robots" content="noindex,nofollow">
   <title>Gestionnaire de contenu</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
